# ndComp

./: .gitignore  README.md  bash_run_job.sh  gridTools.py  job.sh  setup.cfg  sub_jobs.py  update_status.py  upload_search.py
jobTools/: .geometry_geant4_create_export.C.swp  NRooTracker_count_ptls.C  check_h3002.py  check_nRooTracker.py  clumsy_splitFiles.py  dodgy_files.list  fileTools.py  flux_select_nd_plane  flux_select_nd_plane.cc  geom_draw.C  geom_draw_new.C  geom_inspect.C  geom_inspect_wc_nuprism_segment_long.txt  geometry_geant4_create_export.C  geometry_geant4_create_export_compile.sh  nRooTracker_check.py  new_iwcd_geom.C  numbers.py  numbers_updated.py  particles.txt  pyrootTools.py  seedGenerator.py  soph_geometry.txt  splitFiles.py  temp.list  test_seeds.py
lists/: nd280_midas_00010000_00010999_1file.list  nd280_midas_00010000_00010999_1file_kcl.list  nd280_midas_00017000_00017999_1file.list  p6t_run2air_numc_dfc.list  p6t_run2water_numc_dfc.list  p6t_run3air_numc_dfc.list  p6t_run4air_numc_dfc.list  p6t_run4water_numc_dfc.list  p6t_run5water_numc_dfc.list  p6t_run6air_numc_dfc.list  p6t_run7water_numc_dfc.list  p6t_run8air_numc_dfc.list  p6t_run8water_numc_dfc.list  p6t_run9water_numc_dfc.list  p6t_sand2_antinu_numc_dfc.list  p6t_sand2_antinu_numc_dfc.list_mod  p6t_sand2_nu_numc_dfc.list  p6t_sand2_nu_numc_dfc.list_mod  p7E_anti-neut_5.6.4.1_p7c1_run7water_numc_dfc.list  p7E_neut_5.6.4.1_p7c1_run2air_numc_dfc.list  p7E_neut_5.6.4.1_p7c1_run4air_numc_dfc.list  p7E_neut_5.6.4.1_p7c1_run4water_numc_dfc.list  p7E_neut_5.6.4.1_p7c1_run8water_numc_dfc.list  (+34 more)
(+151 files in other folders)
