[metadata]
# metadata for this package

name = nd280Comp 
version = 0.1.0
description = Computing tools
long_description = file: README.md
author = Sophie King
author_email = soph.e.king123@gmail.com
#url = https://example.com/mypy_package
#license = MIT

[options]

python_requires = >=3.6

packages = find:
# tells python to automatically find packages
# [options.packages.find] and  'where'
#  will be used to tell it whee to find them


#install_requires =
    # list package dependencies here
    # e.g.:
    # requests
    # numpy

[options.packages.find]
# where should python look fo packages (any folde that contains modules or scripts)
where = .

[options.entry_points]
# scipts that can be called as a command in the teminal

console_scripts =

    singleJob_nd280Scripts =  nd280Jobs.singleJob_nd280Scripts:main
